mikec/tests/PASS/printing/77.mc
/* print string */

int main(){
	printf("Hello World");
}