mikec/tests/FAIL/arithmetic/7.mc
/* Add Integer and string*/
void main()
{
	String a = "Hello";
	int b = 5;
	int c = a+b;
}
